classDiagram
  class Produto {
    - nome: String
    - preco: double
  }

  class PedidoItem {
    - produto: Produto
    - quantidade: int
  }

  class Pedido {
    - itens: List~PedidoItem~
  }

  class PedidoService {
    - repo: PedidoRepository
  }

  class PedidoRepository
  class PedidoRepositoryMemoria

  Produto "1" -- "*" PedidoItem
  Pedido "1" -- "*" PedidoItem
  PedidoService --> Pedido
  PedidoService ..> PedidoRepository : depende de
  PedidoRepository <|-- PedidoRepositoryMemoria
